--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 peewee==3.2.2
-psycopg2-binary==2.7.4
+gunicorn==19.9.0
 Werkzeug==0.14.1
+passlib==1.7.1
